5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3512/executions/1756_1189.log
== SUBMITION (2019-05-28 22:08:39) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= (".")
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao
-- EXECUTION TIME:
0.161819
-- ERROR:
  File "/home/codebench/codes/1756/1189/main.py", line 20
    
                   ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:08:44) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= (".")
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao
-- ERROR:
File "XXXX", line 20
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:08:54) 
-- CODE:
from numpy import *

bolsonaro = input("hcsdchsv: ").upper()
bolsonaro = bolsonaro.replace('','')

hdtv= (".")
cont= -1
haddadnao= 1
ustra= 0

while (cont >= -len(bolsonaro)):
	hdtv = hdtv + bolsonaro[cont]
	if(bolsonaro[ustra]) != (bolsonaro[cont]):
		haddadnao= 0 
	ustra = ustra + 1
	cont= cont - 1
	
print(bolsonaro)
print(haddadnao)
-- EXECUTION TIME:
0.474581
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
